# MIPT-Linux-MiniFS-Extended

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.c  test_get_put.txt
include/: adapter.h  fs.h
include/common/: net_utils.h  tokenizer.h
include/server/: adapter.h  fs.h
src/: adapter.c  fs.c  tokenizer.c
src/client/: client.c
src/common/: net_utils.c  tokenizer.c
src/driver/: Makefile  minifs_driver.c
src/server/: adapter.c  fs.c  server.c
